--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -442,7 +442,7 @@
         padding-bottom: 3rem;
         box-shadow: -10px 0 30px rgba(0, 0, 0, 0.5);
         z-index: 999;
-        display: flex;
+        display: none;
         overflow-y: auto;
     }
 
