--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,8 @@ pre {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  position: relative;
+  overflow-x: hidden;
 }
 
 @media (min-width: 768px) {
